feat: adicionado novas colunas da tabela jogadores

--- a/views/poker-fonseca/jogadores.hbs
+++ b/views/poker-fonseca/jogadores.hbs
@@ -7,6 +7,8 @@
       <th scope="col">Derrotas</th>
       <th scope="col">Partidas</th>
       <th scope="col">Saldo</th>
+      <th scope="col">A receber</th>
+      <th scope="col">Devendo</th>
     </tr>
   </thead>
   <tbody>
@@ -17,6 +19,8 @@
       <td data-label="Derrotas" data-id="{{id}}">{{qtd_derrotas}}</td>
       <td data-label="Partidas" data-id="{{id}}">{{qtd_partidas}}</td>
       <td data-label="Saldo" data-id="{{id}}">R$ {{saldo}}</td>
+      <td data-label="Receber" data-id="{{id}}">R$ {{receber}}</td>
+      <td data-label="Devendo" data-id="{{id}}">R$ {{devendo}}</td>
     </tr>
     {{/each}}
   </tbody>
